# COVID-w-Polsce

./: .gitignore  README.md  app.py  docker-compose.yml  dockerfile  function_app.py  index.html  main.py  pyproject.toml  requirements.txt  setup_azurite.py
covid-w-polsce/: 2022.csv  main.py  test_main.py
covid_w_polsce/: utils.py
covid_w_polsce/backend/: dockerfile  main.py  utils.py
covid_w_polsce/frontend/: app.py  dockerfile
covid_w_polsce/tests/: test_utils.py
covid_w_polsce/tests/standard_data/: 2020.csv  2021.csv
covid_w_polsce/utils/: __init__.py
services/covid_backend_service/: Dockerfile  pyproject.toml
services/covid_backend_service/covid_backend/: analytics.py  server.py  storage.py
services/covid_backend_service/tests/: conftest.py  test_server.py
static/: render.css
templates/: main.html  render.html
tests/: test_utils.py
tests/standard_data/: 2020.json  2021.json  2022.json
